@@ -1,3 +1,7 @@
+2011-10-02  Jan Hubicka  <jh@suse.cz>
+
+	* gcc.dg/ipa/ctor-empty-1.c: Update dump file.
+
 2011-10-01  David S. Miller  <davem@davemloft.net>
 
 	* gcc.target/sparc/cmask.c: New test.
